impl kids event and house moving

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,7 +1,7 @@
 <div style="margin:30px 30px;">
     <div class="top-search-section">
         <div class="text-center">
-        <h3><i class="fas fa-calendar"></i>　合宿のスケジュールを登録しよう</h3>
+        <h3><i class="fas fa-calendar"></i>　ToDoリストを登録しよう</h3>
         </div>
         <br>
         <form action="/works/new" method="get" >
@@ -30,14 +30,14 @@
         </div>
         <div class="col-sm-6 text-center">
             <div class="top-page-input">
-                <label name="start-date">合宿開始日</label>
+                <label name="start-date">開始日</label>
                 <input type="date" name="start-date" class="form-control" style="width:200px;margin:0 auto;" value="2020-07-07"></input>
-                <label name="end-date">合宿終了日</label>
-                <input type="date" name="end-date" class="form-control" style="width:200px;margin:0 auto;" value="2020-07-14"></input>
                 <label name="schedule-type">目的</label>
                 <select  name="schedule-type" class="form-control" style="width:200px;margin:0 auto;">
-                    <option name="it_subsidy">赤ちゃん予防接種</option>
+                    <option name="baby-vaccination">赤ちゃん予防接種</option>
+                    <option name="kids-event-basic">子供イベント運営</option>
                     <option name="wedding">結婚</option>
+                    <option name="house_moving">引越し</option>
                     <option name="myhome">マイホーム購入</option>
                     <option name="inheritance">相続</option>
                     <option name="it_subsidy">IT補助金</option>
