add study abroad graduate

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -44,6 +44,8 @@
                     <option name="open_restaurant">飲食店開業</option>
                     <option name="nomikai">飲み会</option>
                     <option name="gassyuku">合宿</option>
+                    <option name="graduate-america">アメリカ大学院留学</option>
+                    <option name="graduate-england">イギリス大学院留学</option>
                     <option name="recruit">就活</option>
                     <option name="normal">自分で作る</option>
                     <!-- <option name=""></option> -->
