add realestate daycare interior

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -38,10 +38,13 @@
                     <option name="kids-event-basic">子供イベント運営</option>
                     <option name="wedding">結婚</option>
                     <option name="house_moving">引越し</option>
+                    <option name="interior">新居インテリア</option>
                     <option name="myhome">マイホーム購入</option>
+                    <option name="repair-mansion">マンション修繕工事</option>
                     <option name="inheritance">相続</option>
                     <option name="it_subsidy">IT補助金</option>
                     <option name="open_restaurant">飲食店開業</option>
+                    <option name="open_daycare">デイサービス事業所開設</option>
                     <option name="nomikai">飲み会</option>
                     <option name="gassyuku">合宿</option>
                     <option name="graduate-america">アメリカ大学院留学</option>
