add open doctor

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -40,13 +40,17 @@
                     <option name="house_moving">引越し</option>
                     <option name="interior">新居インテリア</option>
                     <option name="myhome">マイホーム購入</option>
+                    <option name="old-mansion">中古マンション購入</option>
                     <option name="repair-mansion">マンション修繕工事</option>
                     <option name="inheritance">相続</option>
+                    <option name="new-office">オフィス移転</option>
                     <option name="it_subsidy">IT補助金</option>
                     <option name="open_restaurant">飲食店開業</option>
                     <option name="open_daycare">デイサービス事業所開設</option>
+                    <option name="open_doctor">医院開業</option>
                     <option name="nomikai">飲み会</option>
                     <option name="gassyuku">合宿</option>
+                    <option name="article">論文</option>
                     <option name="graduate-america">アメリカ大学院留学</option>
                     <option name="graduate-england">イギリス大学院留学</option>
                     <option name="recruit">就活</option>
