--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -12,8 +12,13 @@
     <% end %>
     </span>
     <% if @parent_task != nil then %>
-    <span class="btn btn-sm btn-warning" style="color:white;margin-left:40px;"><%= @task.line_push_date %>にLine通知</span>
-        <small style="margin-left:20px;font-size:14px;"><a href="/tasks/<%= @parent_task.id %>"><%= @parent_task.t_name %></a>の用事</small>
+        <br>
+        <span style="margin-top:7px;margin-left:33px;">
+            <% if current_role.is_line_friend == true then %>
+                <span class="btn btn-sm btn-warning" style="color:white;"><%= @task.line_push_date %>にLine通知</span>
+            <% end %>
+            <small style="margin-left:20px;font-size:14px;"><a href="/tasks/<%= @parent_task.id %>"><%= @parent_task.t_name %></a>の用事</small>
+        </span>
     <% end %>
     </h4>
     <hr>
