add ghtml gantt

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,11 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=0.5">
 
+    <%= stylesheet_link_tag 'dhtmlxgantt', media: 'all', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'dhtmlxgantt', 'data-turbolinks-track' => true %>
+    
   </head>
 
   <body>
