--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -4,7 +4,31 @@
     <a class="btn btn-warning" href="#search-plan2">デザイン案2(バグあり & デザインのみで未実装...)</a>
 </div>
 <hr>
+
 <div id="search-plan2" style="margin:40px 60px;">
+    <div id="gantt_here" style='width:90%; height:300px;margin-left:5%;'></div>
+
+    <script>
+        var tasks = {
+            data:[
+                <% @tasks.collection.each do |c_task| %>
+                    <% t_start_date = year_month_date(@today.prev_day(c_task.before_date)); %>
+                    <% g_start_date = dhx_start_date(t_start_date) %>
+                    <% if c_task.parent_task_id == 0 then %>
+                        {id:<%= c_task.t_number %>, text:"<%= c_task.t_name %>", start_date:"<%= g_start_date %>", duration:<%= c_task.date_duration %>, parent:<%= c_task.parent_task_id %>},
+                    <% else %>
+                        {text:"<%= c_task.t_name %>", start_date:"<%= g_start_date %>", duration:<%= c_task.date_duration %>, parent:<%= c_task.parent_task_id %>},
+                    <% end %>
+            <% end %>
+            ]
+        };
+        gantt.init("gantt_here");
+        gantt.config.scales = [
+            {unit: "week", step: 1, format: "%j, %Y"}
+        ];
+        gantt.parse(tasks);
+    </script>
+    <br>
     <% t_start_date = Date.new; t_end_date = Date.new; t_diff_date = Date.new %>
     <% task_count = 0 %>
     <%= fields_for 'tasks[]', @tasks do |task| %>
