fix dhtmlgantt css javascript

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=0.5">
 
-    <%= stylesheet_link_tag 'dhtmlxgantt', media: 'all', 'data-turbolinks-track' => true %>
+    <link href="https://scheduletask.s3-ap-northeast-1.amazonaws.com/common/css/dhtmlxgantt.css" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/common/js/dhtmlxgantt.js"></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'dhtmlxgantt', 'data-turbolinks-track' => true %>
     
   </head>
 
