--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,6 +4,7 @@
         <h3><i class="fas fa-calendar"></i>　ToDoリストを登録しよう</h3>
         </div>
         <br>
+        <!-- <form action="/newthird" method="get" > -->
         <form action="/works/new" method="get" >
         <div class="row">
         <!--
