--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -3,7 +3,7 @@
     <hr>
     <h4><i class="fas fa-angle-double-right"></i>　スケジュール</h4>
     <br>
-    <div id="gantt_here" style='width:100%; height:300px;'></div>
+    <div id="gantt_here" style='width:100%; height:400px;'></div>
     <div style="margin-top:40px;">
         <script>
             var tasks = {
@@ -21,8 +21,15 @@
             };
             gantt.init("gantt_here");
             gantt.config.scales = [
-                {unit: "week", step: 1, format: "%j, %Y"}
+                <% if @work.tasks.first.date_duration > 60 then %>
+                    {unit: "month", step: 1, format: "%Y-%m"}
+                <% elsif @work.tasks.first.date_duration > 15 then %>
+                    {unit: "week", step: 1, format: "%Y-%m-%d"}
+                <% else %>
+                    {unit: "day", step: 1, format: "%Y-%m-%d"}
+                <% end %>
             ];
+            gantt.attachEvent("onBeforeLinkAdd", function(id,link){ return false; });
             gantt.parse(tasks);
         </script>
         <div class="btn-group btn-group-justified" role="group" style="width:100%;margin-bottom:30px;">
