--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -37,6 +37,8 @@
                 <select  name="schedule-type" class="form-control" style="width:200px;margin:0 auto;">
                     <option name="baby-vaccination">赤ちゃん予防接種</option>
                     <option name="kids-event-basic">子供イベント運営</option>
+                    <option name="kids-bazaar">幼稚園バザー運営</option>
+                    <option name="divorce">離婚</option>
                     <option name="wedding">結婚</option>
                     <option name="house_moving">引越し</option>
                     <option name="interior">新居インテリア</option>
@@ -45,6 +47,7 @@
                     <option name="repair-mansion">マンション修繕工事</option>
                     <option name="inheritance">相続</option>
                     <option name="new-office">オフィス移転</option>
+                    <option name="it-application">IT導入</option>
                     <option name="it_subsidy">IT補助金</option>
                     <option name="open_restaurant">飲食店開業</option>
                     <option name="open_daycare">デイサービス事業所開設</option>
@@ -54,6 +57,8 @@
                     <option name="article">論文</option>
                     <option name="graduate-america">アメリカ大学院留学</option>
                     <option name="graduate-england">イギリス大学院留学</option>
+                    <option name="company-recruit">会社就活準備</option>
+                    <option name="kosotsu-recruit">会社高卒採用準備</option>
                     <option name="recruit">就活</option>
                     <option name="normal">自分で作る</option>
                     <!-- <option name=""></option> -->
