add tasks foreign company

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -47,6 +47,11 @@
                     <option name="repair-mansion">マンション修繕工事</option>
                     <option name="inheritance">相続</option>
                     <option name="new-office">オフィス移転</option>
+                    <option name="us-company">法人米国進出</option>
+                    <option name="german-company">法人ドイツ進出</option>
+                    <option name="china-company">法人中国進出</option>
+                    <option name="thai-company">法人タイ進出</option>
+                    <option name="philippine-company">法人フィリピン進出</option>
                     <option name="it-application">IT導入</option>
                     <option name="it_subsidy">IT補助金</option>
                     <option name="open_restaurant">飲食店開業</option>
