add foreign exhibition & labor etc...

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -47,14 +47,19 @@
                     <option name="repair-mansion">マンション修繕工事</option>
                     <option name="inheritance">相続</option>
                     <option name="new-office">オフィス移転</option>
+                    <option name="event-operation">イベント運営</option>
+                    <option name="foreign-exhibition">海外展示会</option>
                     <option name="us-company">法人米国進出</option>
                     <option name="german-company">法人ドイツ進出</option>
                     <option name="china-company">法人中国進出</option>
                     <option name="thai-company">法人タイ進出</option>
                     <option name="philippine-company">法人フィリピン進出</option>
+                    <option name="labor-quater1">労務業務１〜３月</option>
+                    <option name="labor-quater2">労務業務４〜６月</option>
                     <option name="it-application">IT導入</option>
                     <option name="it_subsidy">IT補助金</option>
                     <option name="open_restaurant">飲食店開業</option>
+                    <option name="open_salon">サロン開業</option>
                     <option name="open_daycare">デイサービス事業所開設</option>
                     <option name="open_doctor">医院開業</option>
                     <option name="nomikai">飲み会</option>
